--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.7",
+    "util.promisify": "^1.1.1",
     "validator": "^13.6.0"
   }
 }
